# cosmic-python-fr

./: .gitignore  404.html  LICENSE  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
chapitre_00_mise_en_route/: index.html
docs/: chapitre_00_mise_en_route.md  epilogue.md  index.md
docs/partie1/: chapitre_01_modele_domaine.md  chapitre_02_repository.md  chapitre_03_abstractions.md  chapitre_04_service_layer.md  chapitre_05_tdd.md  chapitre_06_unit_of_work.md  chapitre_07_aggregats.md
docs/partie2/: chapitre_08_events.md  chapitre_09_message_bus.md  chapitre_10_commands.md  chapitre_11_events_externes.md  chapitre_12_cqrs.md  chapitre_13_injection_dependances.md
epilogue/: index.html
partie1/chapitre_01_modele_domaine/: index.html
partie1/chapitre_02_repository/: index.html
partie1/chapitre_03_abstractions/: index.html
partie1/chapitre_04_service_layer/: index.html
partie1/chapitre_05_tdd/: index.html
partie1/chapitre_06_unit_of_work/: index.html
partie1/chapitre_07_aggregats/: index.html
partie2/chapitre_08_events/: index.html
partie2/chapitre_09_message_bus/: index.html
partie2/chapitre_10_commands/: index.html
partie2/chapitre_11_events_externes/: index.html
partie2/chapitre_12_cqrs/: index.html
partie2/chapitre_13_injection_dependances/: index.html
search/: search_index.json
src/allocation/adapters/: notifications.py  orm.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: flask_app.py
src/allocation/service_layer/: bootstrap.py  handlers.py  messagebus.py  unit_of_work.py
src/allocation/views/: views.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_repository.py
tests/unit/: test_handlers.py  test_model.py
