[project]
name = "cosmic-python-fr"
version = "0.1.0"
description = "Patterns d'Architecture en Python - Guide en français inspiré de Cosmic Python"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "redis>=5.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allocation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: tests unitaires (rapides, sans I/O)",
    "integration: tests d'intégration (base de données)",
    "e2e: tests end-to-end (API complète)",
]

[tool.ruff]
line-length = 88
target-version = "py312"
